// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressBar Snapshots tests should match custom title & subtitle snapshot 1`] = `
<div>
  <div
    class="component size-64"
  >
    <svg
      class="svg"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle size-64"
        cx="32"
        cy="32"
        r="29"
        stroke-width="6"
      />
      <circle
        class="progressCircle negative size-64"
        cx="32"
        cy="32"
        r="29"
        stroke-dasharray="182.212"
        stroke-dashoffset="145.770"
        stroke-width="6"
        transform="rotate(-90 32 32)"
      />
    </svg>
    <div
      class="labelWrapper"
    >
      <span
        style="color: red;"
      >
        title
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressBar Snapshots tests should match snapshot 1`] = `
<div>
  <div
    class="component size-64"
  >
    <svg
      class="svg"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle size-64"
        cx="32"
        cy="32"
        r="29"
        stroke-width="6"
      />
      <circle
        class="progressCircle positive size-64"
        cx="32"
        cy="32"
        r="29"
        stroke-dasharray="182.212"
        stroke-dashoffset="145.770"
        stroke-width="6"
        transform="rotate(-90 32 32)"
      />
    </svg>
    <div
      class="labelWrapper"
    >
      <div
        class="title secondary secondary-large bold"
      >
        20
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar Snapshots tests should match with view snapshot 1`] = `
<div>
  <div
    class="component size-64"
  >
    <svg
      class="svg"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="backgroundCircle size-64"
        cx="32"
        cy="32"
        r="29"
        stroke-width="6"
      />
      <circle
        class="progressCircle negative size-64"
        cx="32"
        cy="32"
        r="29"
        stroke-dasharray="182.212"
        stroke-dashoffset="145.770"
        stroke-width="6"
        transform="rotate(-90 32 32)"
      />
    </svg>
    <div
      class="labelWrapper"
    >
      <div
        class="title secondary secondary-large bold"
      >
        20
      </div>
    </div>
  </div>
</div>
`;
